--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
+    "cross-env": "^5.2.0",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
+    "material-design-lite": "^1.3.0",
     "popper.js": "^1.14.3",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.0.9"
@@ -25,7 +26,6 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
-    "sass-material-colors": "0.0.5",
     "style-loader": "^0.21.0"
   }
 }
