--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "animate.css": "^3.6.1",
+    "approvejs": "^3.1.2",
     "bootstrap": "^4.1.1",
     "cross-env": "^5.2.0",
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
-    "popper.js": "^1.14.3",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.0.9"
   },
